# desktop

./: .gitignore  Cargo.toml  Taskfile.yml  logdy.config.json  pnpm-lock.yaml
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/ui/: package.json
apps/ui/src/: App.tsx
apps/ui/src/pages/: ComboboxPage.tsx  ContextMenuPage.tsx  DropdownMenuPage.tsx  EmptyPage.tsx  FieldPage.tsx  HoverCardPage.tsx  LabelPage.tsx  MenubarPage.tsx  PaginationPage.tsx  PopoverPage.tsx  ProgressPage.tsx  RadioGroupPage.tsx  ResizablePage.tsx  ScrollAreaPage.tsx  SelectPage.tsx  SeparatorPage.tsx  (+9 more)
crates/application/src/: error.rs
crates/backend/src/: bootstrap.rs  error.rs
crates/contracts/src/: agent.rs  frontend.rs  lib.rs  skill.rs  task.rs
crates/db/src/: bootstrap.rs  location.rs  tests.rs
crates/domain/src/: agent_definition.rs  ids.rs  lib.rs  skill.rs  tests.rs
crates/logging/: Cargo.toml
crates/logging/src/: formatter.rs  tests.rs
crates/process/: Cargo.toml
crates/process-manager/: Cargo.toml
crates/process-manager/src/: lib.rs
crates/process-manager/tests/: process_manager.rs
crates/process/src/: lib.rs  spec.rs  tokio_process.rs  traits.rs  tree.rs
crates/process/tests/: process.rs
docs/: web-server-runtime.md
docs/superpowers/plans/: 2026-07-14-project-architecture-analysis.md
openspec/specs/app-contracts/: spec.md
openspec/specs/frontend-contract-sdk/: spec.md
openspec/specs/task-worktree-provisioning/: spec.md
openspec/specs/web-server-runtime/: spec.md
xtask/src/: export_contracts.rs
(+28 files in other folders)
